// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OcFilterChip renders the filterName when no selected item has been given 1`] = `
<div class="oc-filter-chip oc-flex">
  <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-filter-chip-button" id="oc-filter-chip-1" type="button">
    <!-- @slot Content of the button -->
    <!--v-if-->
    <span class="oc-text-truncate">Users</span>
    <!--v-if-->
    <span class="oc-icon oc-icon-s oc-icon-passive">
      <!---->
    </span>
  </button>
  <div class="oc-drop oc-box-shadow-medium oc-rounded oc-filter-chip-drop" id="oc-drop-2">
    <div class="oc-card oc-card-body oc-background-secondary oc-p-m"></div>
  </div>
  <!--v-if-->
</div>
`;

exports[`OcFilterChip renders the first selected item name when selected items have been given 1`] = `
<div class="oc-filter-chip oc-flex">
  <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-filter-chip-button oc-filter-chip-button-selected" id="oc-filter-chip-3" type="button">
    <!-- @slot Content of the button -->
    <span class="oc-icon oc-icon-s oc-icon-passive">
      <!---->
    </span>
    <span class="oc-text-truncate">Einstein</span>
    <span> +1</span>
    <!--v-if-->
  </button>
  <div class="oc-drop oc-box-shadow-medium oc-rounded oc-filter-chip-drop" id="oc-drop-4">
    <div class="oc-card oc-card-body oc-background-secondary oc-p-m"></div>
  </div>
  <button class="oc-button oc-rounded oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-filter-chip-clear oc-px-xs" type="button">
    <!-- @slot Content of the button -->
    <span class="oc-icon oc-icon-s oc-icon-passive">
      <!---->
    </span>
  </button>
</div>
`;
